wss/2.0/modules/ROOT/pages/wss-reference.adoc
= WSS Module 2.0 Reference 



WSS Module enables you to process and validate an inbound SOAP request against a given Web Service Security (WSS) extension configuration.

== Configurations
---
[[inbound]]
=== Inbound


==== Parameters
[cols=".^20%,.^20%,.^35%,.^20%,^.^5%", options="header"]
|======================
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | *x*{nbsp}
| Actor a| String |  |  | {nbsp}
| Extract Security Header a| Boolean |  |  +++false+++ | {nbsp}
| Validate Username Token a| <<VerifyUsernameTokenConfig>> |  |  | {nbsp}
| Validate Signature a| <<VerifySignatureConfig>> |  |  | {nbsp}
| Decrypt Message a| <<DecryptionConfig>> |  |  | {nbsp}
| Validate Timestamp a| <<VerifyTimestampConfig>> |  |  | {nbsp}
| Validate SAML Assertion a| <<VerifySamlConfig>> |  |  | {nbsp}
| Name a| String |  The identifier of this element used to reference it in other components. |  | *x*
| Expiration Policy a| <<ExpirationPolicy>> |  +++Configures the minimum amount of time that a dynamic configuration instance can remain idle before the runtime considers it eligible for expiration. This does not mean that the platform will expire the instance at the exact moment that it becomes eligible. The runtime will actually purge the instances when it sees it fit.+++ |  | {nbsp}
|======================


==== Associated Operations
* <<validateWss>> {nbsp}


---
[[outbound]]
=== Outbound


==== Parameters
[cols=".^20%,.^20%,.^35%,.^20%,^.^5%", options="header"]
|======================
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | *x*{nbsp}
| Signature Configuration a| <<SignatureConfig>> |  |  | {nbsp}
| Encryption Configuration a| <<EncryptionConfig>> |  |  | {nbsp}
| Timestamp Configuration a| <<TimestampConfig>> |  |  | {nbsp}
| 'Must Understand' Attribute a| Boolean |  |  +++false+++ | {nbsp}
| Name a| String |  The identifier of this element used to reference it in other components. |  | *x*
|======================


==== Associated Operations
* <<applyWss>> {nbsp}



== Operations

[[validateWss]]
=== Validate WSS
`<wss:validate-wss>`


==== Parameters
[cols=".^20%,.^20%,.^35%,.^20%,^.^5%", options="header"]
|======================
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*{nbsp}
| Request a| Binary |  |  +++#[payload]+++ | {nbsp}
| Version a| Enumeration, one of:

** SOAP_11
** SOAP_12 |  |  +++SOAP_12+++ | {nbsp}
| Output Mime Type a| String |  +++The mime type of the payload that this operation outputs.+++ |  | {nbsp}
| Output Encoding a| String |  +++The encoding of the payload that this operation outputs.+++ |  | {nbsp}
| Config Ref a| ConfigurationProvider |  The name of the configuration used to execute this component. |  | 
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* Non-Repeatable Stream |  +++Configure if repeatable streams should be used and their behaviour+++ |  | {nbsp}
| Target Variable a| String |  +++The name of a variable on which the operation's output will be placed+++ |  | {nbsp}
| Target Value a| String |  +++An expression that will be evaluated against the operation's output and the outcome of that expression will be stored in the target variable+++ |  +++#[payload]+++ | {nbsp}
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
|======================

==== Output
[cols=".^50%,.^50%"]
|======================
| *Type* a| Binary
|======================

==== For Configurations.
* <<inbound>> {nbsp}

==== Throws
* WSS:MISSING_CERTIFICATE {nbsp}
* WSS:SECURITY_APPLYING {nbsp}
* WSS:SECURITY_VALIDATING {nbsp}


[[applyWss]]
=== Apply WSS
`<wss:apply-wss>`


==== Parameters
[cols=".^20%,.^20%,.^35%,.^20%,^.^5%", options="header"]
|======================
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*{nbsp}
| Response a| Binary |  |  +++#[payload]+++ | {nbsp}
| Version a| Enumeration, one of:

** SOAP_11
** SOAP_12 |  |  +++SOAP_12+++ | {nbsp}
| Output Mime Type a| String |  +++The mime type of the payload that this operation outputs.+++ |  | {nbsp}
| Output Encoding a| String |  +++The encoding of the payload that this operation outputs.+++ |  | {nbsp}
| Config Ref a| ConfigurationProvider |  The name of the configuration used to execute this component. |  | 
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* Non-Repeatable Stream |  +++Configure if repeatable streams should be used and their behaviour+++ |  | {nbsp}
| Target Variable a| String |  +++The name of a variable on which the operation's output will be placed+++ |  | {nbsp}
| Target Value a| String |  +++An expression that will be evaluated against the operation's output and the outcome of that expression will be stored in the target variable+++ |  +++#[payload]+++ | {nbsp}
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
|======================

==== Output
[cols=".^50%,.^50%"]
|======================
| *Type* a| Binary
|======================

==== For Configurations.
* <<outbound>> {nbsp}

==== Throws
* WSS:MISSING_CERTIFICATE {nbsp}
* WSS:SECURITY_APPLYING {nbsp}
* WSS:SECURITY_VALIDATING {nbsp}



== Types
[[VerifyUsernameTokenConfig]]
=== Verify Username Token Config

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Authenticate User Config a| One of:

* <<CredentialsConfig>>
* <<LDAPConfig>> | Specific type for the authentication configuration. See AuthenticateUserConfig sub-types. |  | x
| Time To Live a| Number | The time difference between creation and expiry time in seconds in the UsernameToken Created element. | 30 |
| Check Nonce a| Boolean | Whether to check the Nonce Element in the UsernameToken.
 A Nonce is a random value that the sender creates to include in each UsernameToken that it sends.
 Only checked if included. | true |
|======================

[[VerifySignatureConfig]]
=== Verify Signature Config

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Truststore Config a| <<TrustStoreConfiguration>> | TrustStore configuration used for validating the signature. |  | x
| Issuer Pattern a| String | Certificate Issuer pattern. |  |
| Subject Pattern a| String | Certificate Subject pattern. |  |
|======================

[[TrustStoreConfiguration]]
=== Trust Store Configuration

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Path a| String |  |  | x
| Password a| String |  |  | x
| Type a| String |  | jks |
|======================

[[DecryptionConfig]]
=== Decryption Config

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Keystore Config a| <<KeyStoreConfiguration>> | KeyStore configuration used for decryption. |  | x
|======================

[[KeyStoreConfiguration]]
=== Key Store Configuration

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Path a| String |  |  | x
| Password a| String |  |  | x
| Alias a| String |  |  |
| Key Password a| String |  |  |
| Type a| String |  | jks |
|======================

[[VerifyTimestampConfig]]
=== Verify Timestamp Config

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Time To Live a| Number | The time within which the Timestamp element is valid. The default is 5 minutes. | 300 |
| Skew Time a| Number | The time difference between server and client. The default is 60 seconds. | 60 |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit to be used in the timeToLive configuration. | SECONDS |
| Strict a| Boolean | If set to true then validates if the timestamp contains an expires element and the semantics are expired. | true |
| Require Expires Header a| Boolean | Whether timestamp Expires header is required. | true |
| Precision In Milliseconds a| Boolean | If set to true then use timestamps with milliseconds, otherwise omit the milliseconds. | true |
|======================

[[VerifySamlConfig]]
=== Verify Saml Config

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Saml Version a| Enumeration, one of:

** SAML10
** SAML11
** SAML20 | SAML Version. | SAML10 |
| Time To Live a| Number | The time in seconds within which a SAML Assertion is valid,
 if it does not contain a NotOnOrAfter Condition. The default is 30 minutes. | 1800 |
| Skew Time a| Number | The time difference between server and client. The default is 60 seconds. | 60 |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit to be used in the timeToLive and skewTime configuration. | SECONDS |
| Require Standard Subject Confirmation Method a| Boolean | If set, at least one of the standard Subject Confirmation Methods in SamlConfirmationMethod
 *must* be present in the assertion (Bearer / SenderVouches / HolderOfKey). | false |
| Require Bearer Signature a| Boolean | If set, an Assertion with a Bearer Subject Confirmation Method must be signed. | false |
| Validate Signature Against Profile a| Boolean | Whether to validate the signature of the Assertion (if it exists) against the
 relevant profile. Default is true. | false |
| Required Subject Confirmation Method a| Enumeration, one of:

** BEARER
** HOLDER_OF_KEY
** SENDER_VOUCHES | If set, the value must appear as one of the Subject Confirmation Methods SamlConfirmationMethod. |  |
|======================

[[ExpirationPolicy]]
=== Expiration Policy

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute |  |
|======================

[[repeatable-in-memory-stream]]
=== Repeatable In Memory Stream

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | This is the amount of memory that will be allocated in order to consume the stream and provide random access to it. If the stream contains more data than can be fit into this buffer, then it will be expanded by according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. |  |
| Buffer Size Increment a| Number | This is by how much will be buffer size by expanded if it exceeds its initial size. Setting a value of zero or lower will mean that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error will be raised when the buffer gets full. |  |
| Max Buffer Size a| Number | This is the maximum amount of memory that will be used. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error will be raised. A value lower or equal to zero means no limit. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which all these attributes are expressed |  |
|======================

[[repeatable-file-store-stream]]
=== Repeatable File Store Stream

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| In Memory Size a| Number | Defines the maximum memory that the stream should use to keep data in memory. If more than that is consumed then it will start to buffer the content on disk. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  |
|======================

[[ErrorMapping]]
=== Error Mapping

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Source a| Enumeration, one of:

** ANY
** REDELIVERY_EXHAUSTED
** TRANSFORMATION
** EXPRESSION
** SECURITY
** CLIENT_SECURITY
** SERVER_SECURITY
** ROUTING
** CONNECTIVITY
** RETRY_EXHAUSTED
** TIMEOUT |  |  | 
| Target a| String |  |  | x
|======================

[[SignatureConfig]]
=== Signature Config

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Key Identifier a| Enumeration, one of:

** ISSUER_SERIAL
** DIRECT_REFERENCE
** X509_KEY_IDENTIFIER
** THUMBPRINT
** SKI_KEY_IDENTIFIER
** KEY_VALUE | The key identifier type to use for signature.
 See SignatureKeyIdentifierConstants | ISSUER_SERIAL |
| Algorithm a| Enumeration, one of:

** RSAwithSHA256
** ECDSAwithSHA256
** DSAwithSHA1
** RSAwithSHA1
** RSAwithSHA224
** RSAwithSHA384
** RSAwithSHA512
** ECDSAwithSHA1
** ECDSAwithSHA224
** ECDSAwithSHA384
** ECDSAwithSHA512
** DSAwithSHA256 | The signature algorithm to use. The default is set by the data in the certificate.
 See SignatureAlgorithmConstants |  |
| Digest Algorithm a| Enumeration, one of:

** SHA1
** SHA256
** SHA224
** SHA384
** SHA512 | The signature digest algorithm to use.
 See SignatureDigestAlgorithmConstants | SHA1 |
| C14n Algorithm a| Enumeration, one of:

** CanonicalXML_1_0
** CanonicalXML_1_1
** ExclusiveXMLCanonicalization_1_0 | Defines which signature c14n (canonicalization) algorithm to use.
 See SignatureC14nAlgorithmConstants | ExclusiveXMLCanonicalization_1_0 |
| Keystore Config a| <<KeyStoreConfiguration>> | KeyStore configuration used for signing. |  | x
| Wss Parts a| Array of <<wss-part>> | Lists of parts to be encrypted. If any part is specified, the SOAP Body will be encrypted. |  |
|======================

[[wss-part]]
=== Wss Part

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Encode a| Enumeration, one of:

** ELEMENT
** CONTENT |  | CONTENT |
| Namespace a| String |  |  | x
| Localname a| String |  |  | x
|======================

[[EncryptionConfig]]
=== Encryption Config

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Encryption Key Identifier a| Enumeration, one of:

** ISSUER_SERIAL
** DIRECT_REFERENCE
** X509_KEY_IDENTIFIER
** THUMBPRINT
** SKI_KEY_IDENTIFIER
** ENCRYPTED_KEY_SHA1 | The key identifier type to use for encryption. | ISSUER_SERIAL |
| Encryption Sym Algorithm a| Enumeration, one of:

** TRIPLE_DES
** AES_128
** AES_256
** AES_192
** AES_128_GCM
** AES_192_GCM
** AES_256_GCM | The symmetric encryption algorithm to use. | AES_128 |
| Encryption Key Transport Algorithm a| Enumeration, one of:

** KEYTRANSPORT_RSA15
** KEYTRANSPORT_RSAOAEP
** KEYTRANSPORT_RSAOAEP_XENC11 | The algorithm used to encrypt the generated symmetric key. | KEYTRANSPORT_RSAOAEP |
| Encryption Digest Algorithm a| Enumeration, one of:

** SHA1
** SHA256
** SHA384
** SHA512 | The encryption digest algorithm to use with the key transport algorithm. | SHA1 |
| Keystore Config a| <<KeyStoreConfiguration>> | KeyStore configuration used for encryption. |  |
| Wss Parts a| Array of <<wss-part>> | Lists of parts to be encrypted. If any part is specified, the SOAP Body will be encrypted. |  |
|======================

[[TimestampConfig]]
=== Timestamp Config

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Time To Live a| Number | The time within which the Timestamp element is valid. The default is 5 minutes. | 300 |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit to be used in the timeToLive configuration. | SECONDS |
| Precision In Milliseconds a| Boolean | If set to true then use timestamps with milliseconds, otherwise omit the milliseconds. | true |
|======================

[[CredentialsConfig]]
=== Credentials Config

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Username a| String | Username. |  | x
| Password a| String | Password. |  | x
|======================

[[LDAPConfig]]
=== LDAP Config

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Provider Url a| String | LDAP Server URL. |  | x
| User Dn a| String | User that will authenticate to the directory. |  | x
| Password a| String | Credentials to use for getting authenticated contexts. |  | x
| Search Base a| String | The search base defines the starting point for the search in the directory tree. |  | x
| Search Filter a| String | Filters can be used to restrict the numbers of users or groups that are permitted to access an application. |  | x
| Search In Subtree a| Boolean | Whether to search in subtree. | false |
|======================
